--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         <div class="row justify-content-center mt-5">
           <div class="col-md-6 text-center ftco-animate">
             <p>
-              <a href="https://drive.google.com/file/d/1hz2ow8obsWzsjlyvmfHIHspdUuLgGKIe/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a>
+              <a href="https://drive.google.com/file/d/1WgdRLG-DVQ2mEORPuCcmQboqcKaFqvg-/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a>
             </p>
           </div>
         </div>
