--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                         <p>
                           <span class="title-s">Job Role:
                           </span>
-                          <span>Django Backend Developer.</span></p>
+                          <span>Full-Stack Developer (with focus on ML applications) / Data Analyst.</span></p>
                         <p>
                           <!-- <span class="title-s">Experience: </span> <span>5 Years 3 Months</span></p> <p> -->
                           <span class="title-s">College:
@@ -249,19 +249,19 @@
 
                   <div class="skill-mf">
                     <p class="title-s">Skills</p>
-                    <span> Django REST Framework</span>
+                    <span> Machine Learning (ML)</span>
                     <!-- <span class="pull-right">85%</span> -->
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 99%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
-                    <span>SQL</span>
+                    <span>Django REST Framework</span>
                     <!-- <span class="pull-right">95%</span> -->
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 99%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
-                    <span>PYTHON</span>
+                    <span>Python</span>
                     <!-- <span class="pull-right">85%</span> -->
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 99%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -273,13 +273,13 @@
                       <div class="progress-bar" role="progressbar" style="width: 99%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
-                    <span>Machine Learning (ML)</span>
+                    <span>SQL</span>
                     <!-- <span class="pull-right">99%</span> -->
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 99%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
 
-                    <span>Business Research</span>
+                    <span>Data-Analytics / Business Research</span>
                     <!-- <span class="pull-right">99%</span> -->
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 99%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -296,11 +296,11 @@
                   <h1 class="big">About</h1>
                   <h2 class="mb-4">About Me</h2>
 
-                  <p>Backend Developer at To Be Honest (TBH) , proficient in Python, PowerBI and skilled in extracting insights from complex datasets to drive informed business decisions. Well-versed in Python with a solid foundation in SQL. Eager to contribute to innovative web development projects.</p>
+                  <p>I’m a student at the National Institute of Technology with a deep enthusiasm for Machine Learning and deriving insights from data. I enjoy coding in Python, especially for web development, where I create, deploy, and integrate scripts into web applications. My passion lies in combining data-driven approaches with software development to build solutions that solve real-world problems.</p>
                   <ul class="about-info mt-4 px-md-0 px-2">
                     <li class="d-flex">
                       <span>Profile:</span>
-                      <span>Backend Developer &amp; Data Analyst</span></li>
+                      <span>A passionate Machine Learning Enthusiast, experienced Python Developer, and detail-oriented Data Analyst.</span></li>
                     <li class="d-flex">
                       <span>Domain:</span>
                       <span>Software Developement and Analytics</span></li>
@@ -343,12 +343,12 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
             <h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Experienced Django developer and data analyst adept at crafting scalable web applications and extracting actionable insights from diverse datasets. Skilled in Python, Django, Django REST Framework, SQL and data visualization tools. Proven track record of delivering high-quality solutions to drive business growth and optimize performance.</p>
+            <p>Machine Learning and Data Science enthusiast with a passion for extracting meaningful insights from data and developing intelligent solutions. Proficient in Python and Django for full-stack web development, I specialize in building, deploying, and integrating scripts into scalable web applications. I have hands-on experience with machine learning libraries like TensorFlow and Scikit-learn, and data analysis tools such as Pandas, NumPy, and SQL. Eager to apply my skills to solve complex problems and create impactful data-driven applications.</p>
           </div>
         </div>
 
         <div class="row">
-          <h1 class="big-4">Experience</h1>
+          <h1 class="big-4">Experience / Internships</h1>
           <div class="underline"></div>
         </div>
         <br>
@@ -356,13 +356,15 @@
         <div class="row">
           <div class="col-md-6">
             <div class="resume-wrap ftco-animate">
-              <span class="date">2024-Present</span>
-              <h2>Software Developer</h2>
+              <span class="date">March-May(2024)</span>
+              <h2>Django Backend Developer Intern</h2>
               <span class="position">TBH</span>
               <p class="mt-4">To Be Honest, a subsidary of Tatsya.com , specializes in Back-End Developement, Data Analytics and creating Machine Learning Models. We craft custom software solutions to enhance functionality and productivity across industries.
                 <ul>
                   <li>Working on Backend-Developement for applications Development for TBH based Django-Rest frame work.</li>
                   <li>Experience of working in Postgre Sql Server.</li>
+                  <li>Integrated third-party APIs and services, handling authentication and data processing to enrich backend functionality.</li>
+                  <li>Collaborated with frontend developers to ensure smooth API consumption.</li>
                   <!-- <li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li> -->
                 </ul>
               </p>
@@ -372,13 +374,11 @@
 
           <div class="col-md-6">
             <div class="resume-wrap ftco-animate">
-              <span class="date">2022-Present</span>
-              <h2>Business Research Analyst</h2>
-              <span class="position">Ozibook Tech solutions</span>
-              <p class="mt-4">A business data analyst we worked on complex data to uncover trends, patterns, and insights that inform strategic decisions. They utilize statistical analysis, data mining techniques, and visualization tools to identify opportunities for improvement, optimize processes, and drive organizational success through data-driven decision-making.
+              <span class="date">August-September(2024)</span>
+              <h2>Research and Analytics focused on SMB</h2>
+              <span class="position">Seaport AI</span>
+              <p class="mt-4">During my research and analytics work focused on Small and Medium Businesses (SMBs), I conducted in-depth analysis on the challenges faced by SMBs in scaling their operations, accessing resources, and improving profitability. I used data-driven insights to identify key obstacles such as limited access to funding, inadequate technology adoption, and market competition. My analysis helped in crafting strategic recommendations to improve business efficiency, optimize resource allocation, and develop targeted solutions aimed at supporting SMB growth and sustainability.
                 <ul>
-                  <li>Researching market trends to meet client demands.</li>
-                  <li>Creating documentation such as business requirement documents (BRDs) and Bussiness Model Canvases (BMCs).</li>
                   <li>Conducting market research and competitor analysis.</li>
                   </ul>
               </p>
@@ -443,7 +443,7 @@
             <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
               <div class="block-18">
                 <div class="text">
-                  <strong class="number" data-number="13">0</strong>
+                  <strong class="number" data-number="15">0</strong>
                   <span>Projects</span>
                 </div>
               </div>
@@ -522,7 +522,7 @@
               </div>
               <h3 class="mb-4">Download Resume</h3>
               <p>
-                <a href="https://drive.google.com/file/d/1hz2ow8obsWzsjlyvmfHIHspdUuLgGKIe/view?usp=sharing">resumelink</a>
+                <a href="https://drive.google.com/file/d/1ZX19oiEN6y0pP_8f5GGfT55ZIEMEaBRQ/view">resumelink</a>
               </p>
             </div>
           </div>
