--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         </div>
 
         <div class="row">
-          <h1 class="big-4">Experience / Internships</h1>
+          <h1 class="big-4">Internships</h1>
           <div class="underline"></div>
         </div>
         <br>
