--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                 <div class="overlay"></div>
               </a>
               <div class="text mt-3 text-center">
-                <h3 class="heading"><a href="https://github.com/shauryasawai/pricing_analysis">ynamic Pricing Algorithm for the Village Restaurant</a></h3>
+                <h3 class="heading"><a href="https://github.com/shauryasawai/pricing_analysis">Dynamic Pricing Algorithm for the Village Restaurant</a></h3>
                 <p>Python, Yelp API, Google Maps API, OpenWeatherMap API, Machine Learning.
                   Developed a real-time pricing solution by analyzing data from 50+ competitors using Yelp and Google Maps APIs. Integrated dynamic pricing rules based on weather and traffic, achieving 80% accuracy in predicting optimized menu prices, enhancing revenue and customer satisfaction.</p>
               </div>
