--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
             <h2>GenAI Solution Developer</h2>
             <span class="position">Botter Solutions Pvt Ltd.</span>
             <p class="mt-4">
+              I worked on implementing cutting-edge solutions in the field of Natural Language Processing (NLP), focusing specifically on fine-tuning embeddings using Hugging Face Transformers. My primary contribution was the development and optimization of a PyTorch-based model that incorporated a custom linear layer for domain-specific tasks.
               Built a text extraction pipeline to process content from 100+ PDFs and 50+ web pages using Python libraries like pdf2 and BeautifulSoup4. Extracted and tokenized 10,000+ sentences from PDFs, implementing preprocessing steps such as stop-word removal and text normalization to enhance model input quality. Prepared a labeled dataset of 5,000+ sentence pairs for fine-tuning embeddings. Designed a custom embedding model with a linear layer on a Hugging Face pretrained model, achieving a 15% improvement in semantic similarity tasks.
               <ul>
-                <li>This role provided extensive experience in Generative AI, NLP fine-tuning, and scalable API development, delivering measurable improvements in text processing performance.</li>
                 </ul>
             </p>
           </div>
