--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         <div class="row justify-content-center mt-5">
           <div class="col-md-6 text-center ftco-animate">
             <p>
-              <a href="https://drive.google.com/file/d/1ZX19oiEN6y0pP_8f5GGfT55ZIEMEaBRQ/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a>
+              <a href="https://drive.google.com/file/d/1VkfbKk7ndpxpj3W3E81fQjuSCaXGl0TU/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a>
             </p>
           </div>
         </div>
