cv_update_college_session

--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
               </div>
               <h3 class="mb-4">Download Resume</h3>
               <p>
-                <a href="https://drive.google.com/file/d/1ZX19oiEN6y0pP_8f5GGfT55ZIEMEaBRQ/view">resumelink</a>
+                <a href="https://drive.google.com/file/d/1VkfbKk7ndpxpj3W3E81fQjuSCaXGl0TU/view?usp=sharing">resumelink</a>
               </p>
             </div>
           </div>
