--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         }
 
         .about-img img {
-          content: url("images/me.jpg");
+          content: url("https://media.licdn.com/dms/image/v2/D5603AQH5lCJCdZr-AA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1720171211307?e=1749081600&v=beta&t=KnGH3nEIJ5Wd7MZ3foOy4VkJ5cadtsY6gd69qMUz4pI");
         }
       }
     </style>
@@ -172,7 +172,7 @@
           <div class="overlay"></div>
           <div class="container">
             <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-              <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/me.png);">
+              <div class="one-third js-fullheight order-md-last img" style="background-image:url(https://media.licdn.com/dms/image/v2/D5603AQH5lCJCdZr-AA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1720171211307?e=1749081600&v=beta&t=KnGH3nEIJ5Wd7MZ3foOy4VkJ5cadtsY6gd69qMUz4pI);">
                 <div class="overlay"></div>
               </div>
               <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -232,7 +232,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="images/about-me.png" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="https://media.licdn.com/dms/image/v2/D5603AQH5lCJCdZr-AA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1720171211307?e=1749081600&v=beta&t=KnGH3nEIJ5Wd7MZ3foOy4VkJ5cadtsY6gd69qMUz4pI" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
                     <!-- Details next to profile image -->
